Atualização do Readme

--- a/README
+++ b/README
@@ -1,13 +1,5 @@
-Tecnologias
-HTML
+PT-BR:
+Este projeto utiliza HTML, CSS e JavaScript para criar uma interface web simples e funcional.
 
-CSS
-
-JavaScript
-
-Technologies
-HTML
-
-CSS
-
-JavaScript
+EN:
+This project uses HTML, CSS, and JavaScript to create a simple and functional web interface.
